# IDGenerator

./: .gitignore  CMakeLists.txt  LICENSE  compile.sh  readme.md
client/: CMakeLists.txt
client/include/: TCPClient.hpp
client/src/: TCPClient.cpp  main.cpp
server/: CMakeLists.txt
server/include/: TCPServer.hpp
server/src/: TCPServer.cpp  main.cpp
